@startuml domain model

class FamilyMember {
    name: string
    gender: Gender
    spouse: FamilyMember
    child: Child[]
    father: Father
    mother: Mother
}

class Mother {
}

class Father {
}

class Child {
}

FamilyMember <|-- Mother
FamilyMember <|-- Father
FamilyMember <|-- Child

Mother "1" -- "*" Child
Father "1" -- "*" Child
Mother -- Father

@enduml